--- a/config.toml
+++ b/config.toml
@@ -230,7 +230,7 @@ ignoreErrors = ["error-remote-getjson", "error-missing-instagram-accesstoken"]
       # title shown in home page (HTML format is supported)
       title = "kbaek999"
       # subtitle shown in home page (HTML format is supported)
-      subtitle = "기술과 여행, 일상 블로그"
+      subtitle = "기술과 여행 블로그"
       # whether to use typeit animation for subtitle
       typeit = true
       # whether to show social links
